--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
@@ -67,10 +67,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estupendo, se están preparando 3.0 pizzas familiares y 4.0 pizzas medianas. Digame su dirección\n",
+      "Le mandaremos las 7.0 pizzas a la dirección Calle Carrero Juan Ramón 8, 2A. Madrid. 28025. Serán 75.4 a pagar en euros>. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pizz_familiar=float(input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana ¿Cuántas pizzas  familiares desea?\"))\n",
+    "pizz_mediana=float(input(\"Estupendo, ¿cuántas pizzas medianas desea?\"))\n",
+    "print(f\"Estupendo, se están preparando {pizz_familiar} pizzas familiares y {pizz_mediana} pizzas medianas. Digame su dirección\")\n",
+    "total_pizz=(pizz_familiar+pizz_mediana)\n",
+    "direccion=str(\"Calle Carrero Juan Ramón 8, 2A. Madrid. 28025\")\n",
+    "monto_total=(pizz_mediana*8.95)+(pizz_mediana*9.90)\n",
+    "print(f\"Le mandaremos las {total_pizz} pizzas a la dirección {direccion}. Serán {monto_total} a pagar en euros>. Muchas gracias por su pedido.\")"
+   ]
   },
   {
    "attachments": {
@@ -95,15 +112,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1,2,3']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_prueba=input(\"Introduce tres número enteros separados por comas\").split()\n",
+    "\n",
+    "print(lista_prueba)\n",
+    "len(lista_prueba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista=input(\"Introduce tres número enteros separados por comas\").split(sep=\",\")\n",
+    "\n",
+    "print(lista)\n",
+    "print(len(lista))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_int = [int(lista[0]), int(lista[1]), int(lista[2])]\n",
+    "print(lista_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(lista_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(lista_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(lista_int)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
