Challenge unidad 2-sprint1

--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
@@ -112,36 +112,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1,2,3']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_prueba=input(\"Introduce tres número enteros separados por comas\").split()\n",
-    "\n",
-    "print(lista_prueba)\n",
-    "len(lista_prueba)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 139,
    "metadata": {},
    "outputs": [
@@ -237,6 +207,45 @@
    ],
    "source": [
     "sum(lista_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hipotesis1=max(lista_int)-min(lista_int)\n",
+    "hipotesis2=sum(lista_int)/5\n",
+    "hipotesis1==hipotesis2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número máximo menos el mínimo es igual a 2 y la división de la suma total entre 5 es igual a 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"El número máximo menos el mínimo es igual a {hipotesis1} y la división de la suma total entre 5 es igual a {hipotesis2}\")"
    ]
   }
  ],
