--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,10 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta magnífica tecnología científica,\n",
+      "\t que ahorra trabajo y nos hace la vida más fácil,\n",
+      "\t\t nos aporta tan poca felicidad? \n",
+      "\t\t\tLa respuesta es esta, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      " \"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  Se imprime un texto utilizando slash invertido y la \"n\" para cambiar a la siguiente línea, se utiliza la \"t\" para darle tabulación. Para las comillas se utiliza \\\"\\\"\n",
+    "print(\"¿Por qué esta magnífica tecnología científica,\\n\\t que ahorra trabajo y nos hace la vida más fácil,\\n\\t\\t nos aporta tan poca felicidad? \\n\\t\\t\\tLa respuesta es esta, simplemente: porque aún no hemos aprendido a usarla con tino.\\n \\\"Albert Einstein\\\"\")"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +122,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Carrero Juan Ramón', 8, 'Madrid', 28025)\n",
+      "Carrero Juan Ramón 8 Madrid 28025\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Se crean las variales y se concatenena de dos maneras, la segundo muestra un mejor resultado, para las variables numéricas se le añade el str delante para poder concatenarla\n",
+    "calle=\"Carrero Juan Ramón\"\n",
+    "numero= 8\n",
+    "poblacion= \"Madrid\"\n",
+    "cod_postal= 28025\n",
+    "direccion= calle, numero, poblacion, cod_postal\n",
+    "direccion_1= calle+\" \" +str(numero)+\" \"+poblacion+\" \"+str(cod_postal)\n",
+    "print(direccion)\n",
+    "print(direccion_1)"
+   ]
   },
   {
    "attachments": {
@@ -143,7 +177,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Se crea una variable tipo \"str\" llamada calle\n",
+    "calle=\"Carrero Juan Ramón\"\n",
+    "# Se crea una variable tipo \"int\" para indicar el número de la casa\n",
+    "numero= 8\n",
+    "# Se crea una variable tipo \"str\" para nombrar la población\n",
+    "poblacion= \"Madrid\"\n",
+    "# Se crea una variable tipo \"int\" para indicar el código postal\n",
+    "cod_postal= 28025\n",
+    "# Se crea una variable nombrada dirección donde se concatenan las anteriores\n",
+    "direccion_1= calle+\" \" +str(numero)+\" \"+poblacion+\" \"+str(cod_postal)\n",
+    "# Se imprime la variable concatenada\n",
+    "print(direccion_1)"
+   ]
   },
   {
    "attachments": {
@@ -180,10 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio\n",
+      "Alpha\n",
+      "Agua\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No tiene la comilla que cierra el contenido de la variable\n",
+    "otra_var=\"Ejercicio\"\n",
+    "print(otra_var)\n",
+    "# True es una de las palabras reservadas\n",
+    "# mi variab1e, debe contener un guión bajo entre las dos palabras\n",
+    "mi_variab1e=\"Alpha\"\n",
+    "print(mi_variab1e)\n",
+    "# importa no se puede utilizar como variable, sirve para importar desde los diferentes diccionarios\n",
+    "# 81mi_variable, las variables al ser declaradas no pueden comenzar con un número\n",
+    "mi_variable81=\"Agua\"\n",
+    "print(mi_variable81)"
+   ]
   },
   {
    "attachments": {
@@ -214,15 +283,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "42.857142857142854\n",
+      "57.14285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "victorias_femenina2023=4\n",
+    "derrotas_femenina2023= 3\n",
+    "porc_victorias=(victorias_femenina2023/(victorias_femenina2023+derrotas_femenina2023))*100\n",
+    "porc_derrotas=(derrotas_femenina2023/(victorias_femenina2023+derrotas_femenina2023))*100\n",
+    "print(victorias_femenina2023)\n",
+    "print(derrotas_femenina2023)\n",
+    "print(porc_derrotas)\n",
+    "print(porc_victorias)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
