--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "17.5\n",
+      "<class 'float'>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'nota_matematicas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(nota_final))\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m nota_matematicas\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnota_matematicas\u001b[49m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m nota_castellano\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(nota_castellano)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nota_matematicas' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "nota_matematicas=8\n",
+    "nota_castellano=9.5\n",
+    "print(type(nota_matematicas))\n",
+    "print(type(nota_castellano))\n",
+    "nota_final=nota_castellano+nota_matematicas\n",
+    "print(nota_final)\n",
+    "print(type(nota_final))\n",
+    "del nota_matematicas\n",
+    "print(nota_matematicas)\n",
+    "del nota_castellano\n",
+    "print(nota_castellano)"
+   ]
   },
   {
    "attachments": {
@@ -85,10 +119,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09948376736367678\n"
+     ]
+    }
+   ],
+   "source": [
+    "grados=float(input(\"Introduzca los grados que desea convertir a radianes\"))\n",
+    "conversor=float(grados*(math.pi/180))\n",
+    "print(conversor)"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El área del paralelogragro es de 36.85cm\n"
+     ]
+    }
+   ],
+   "source": [
+    "base=float(input(\"Indique el valor de la base del paralelogramo\"))\n",
+    "altura=float(input(\"Indique el valor de la altura del paralelogramo\"))\n",
+    "area=base*altura\n",
+    "print(f\"El área del paralelogragro es de {area}cm\")"
+   ]
   },
   {
    "attachments": {
@@ -129,10 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.85\n",
+      "El área de paralelogramo ed de 36.85m\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(area)\n",
+    "mensaje=f\"El área de paralelogramo ed de {area}cm\"\n",
+    "print(mensaje.replace(\"cm\",\"m\"))"
+   ]
   },
   {
    "attachments": {
@@ -151,14 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yidssian, naciste en el año 1984.\n"
+     ]
+    }
+   ],
    "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = int(input(\"¿Cuál es tu edad? \"))\n",
     "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
+    "año_nacimiento = año_actual - edad\n",
     "\n",
     "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
    ]
@@ -166,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
