--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_01/Practica_Obligatoria/13_Colecciones_Funciones_Practica_Obligatoria.ipynb
@@ -59,10 +59,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "\n",
+    "for elemento in ejer_2:\n",
+    "    cuadrado=elemento**2\n",
+    "    print(cuadrado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_2 = [1,2,3,4,5]\n",
+    "cuadrados=list(map(lambda x: x**2, ejer_2))\n",
+    "print(cuadrados)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +116,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<built-in method index of str object at 0x000001D93B8CD230>\n",
+      "<built-in method index of str object at 0x000001D93635A030>\n",
+      "<built-in method index of str object at 0x000001D93635A030>\n",
+      "<built-in method index of str object at 0x000001D93B8CD230>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "duplicado=[]\n",
+    "\n",
+    "for duplicado in ejer_3:\n",
+    "    if ejer_3.count(duplicado)==2:\n",
+    "        print(duplicado.index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['binario', 'binario', 'es', 'es']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_3 = [\"Un\", \"árbol\", \"binario\", \"es\", \"una\", \"estructura\", \"de\", \"un\", \"tipo\", \"particular\", \"a\", \"veces\", \"no\", \"es\", \"ni\", \"binario\"]\n",
+    "\n",
+    "duplicado=[]\n",
+    "\n",
+    "for i in range(len(ejer_3)):\n",
+    "    for j in range(len(ejer_3)):\n",
+    "        if i != j: \n",
+    "            if ejer_3[i]==ejer_3[j] and ejer_3[i] not in duplicado:\n",
+    "                duplicado.append(ejer_3[i])\n",
+    "                if ejer_3[i] == duplicado.append(ejer_3[i]):\n",
+    "                    duplicado.append(i)\n",
+    "\n",
+    "print(duplicado)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +182,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(ejer_9.count(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 29, 45, 67, 78, 90)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "new_tuple=ejer_9[5:11]\n",
+    "print(new_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "elementos=len(ejer_9)\n",
+    "print(elementos)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +245,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "\n",
+    "print(ejer_9.count(60))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +274,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "lista_9=list(ejer_9)\n",
+    "print(lista_9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set(ejer_9))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "\n",
+    "my_dict = dict(zip(range(len(ejer_9)), ejer_9))\n",
+    "\n",
+    "\n",
+    "print(my_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +341,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([11, 22, 33, 44, 55])\n",
+      "19326120\n"
+     ]
+    }
+   ],
+   "source": [
+    "ejer_6 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "\n",
+    "valores=(ejer_6.values())\n",
+    "print(valores)\n",
+    "\n",
+    "def mult_valores(valores):\n",
+    "    produto=1\n",
+    "    \n",
+    "    for elemento in valores:\n",
+    "        produto*=elemento\n",
+    "    return(produto)\n",
+    "\n",
+    "resultado=mult_valores(valores)\n",
+    "print(resultado)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,14 +384,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Old Havan/Habana Vieja', 'autor': 'Yidssian', 'idioma_original': 'español', 'año_de_publicación': 2024}\n"
+     ]
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "dic1=dict(título=\"Old Havan/Habana Vieja\", autor=\"Yidssian\", idioma_original= \"español\",año_de_publicación=2024 )\n",
+    "print(dic1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Cien años de soledad', 'Rebelión en la granja', 'Come, Reza, Ama', 'El código Da Vinci']\n"
+     ]
+    }
+   ],
+   "source": [
+    "libreria=[]\n",
+    "\n",
+    "libreria.append(\"Cien años de soledad\")\n",
+    "libreria.append(\"Rebelión en la granja\")\n",
+    "libreria.append(\"Come, Reza, Ama\")\n",
+    "libreria.append(\"El código Da Vinci\")\n",
+    "\n",
+    "print(libreria)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +434,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'título': 'Old Havan/Habana Vieja', 'autor': 'Yidssian', 'idioma_original': 'esperanto', 'año_de_publicación': 2024}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic1=dict(título=\"Old Havan/Habana Vieja\", autor=\"Yidssian\", idioma_original= \"español\",año_de_publicación=2024 )\n",
+    "dic1[\"idioma_original\"]=\"esperanto\"\n",
+    "print(dic1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,10 +462,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "si\n",
+      "si\n",
+      "si\n",
+      "si\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "dic1=dict(título=\"Old Havana/Habana Vieja\", autor=\"Yidssian\", idioma_original= \"español\",año_de_publicación=2024 )\n",
+    "\n",
+    "\n",
+    "def buscador_titulo(titulo):\n",
+    "    \n",
+    "    titulo=\"Old Havana/Habana Vieja\"\n",
+    "\n",
+    "    if dic1[\"título\"]==titulo:\n",
+    "         return True\n",
+    "         \n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "\n",
+    "for titulo in dic1:\n",
+    "        if buscador_titulo(titulo):\n",
+    "             print(\"si\")\n",
+    "        else:\n",
+    "             print(\"Ese no lo tenemos, ¿mola?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(buscador_titulo(titulo))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,10 +556,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'alonso@gmail.com' is a valid email address.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def is_valid_email(email):\n",
+    "\n",
+    "\n",
+    "    regex = r'^[a-z0-9]+[\\._]?[a-z0-9]+[@]\\w+[.]\\w+$'\n",
+    "\n",
+    "   \n",
+    "    if re.match(regex, email):\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "emails =[input(\"email\")]\n",
+    "\n",
+    "\n",
+    "for email in emails:\n",
+    "\n",
+    "    if is_valid_email(email):\n",
+    "\n",
+    "        print(f\"'{email}' is a valid email address.\")\n",
+    "\n",
+    "    else:\n",
+    "\n",
+    "        print(f\"'{email}' is an invalid email address.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,6 +617,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_dni_valido(dni):\n",
+    "    \n",
+    "    if len(dni) < 8 or len(dni) > 9:\n",
+    "        return False\n",
+    "    \n",
+    "    numero = int(dni[:-1])\n",
+    "    letra = dni[-1].upper()\n",
+    "    \n",
+    "    letras_validas = 'TRWAGMYFPDXBNJZSQVHLCKE'\n",
+    "    letra_correcta = letras_validas[numero % 23]\n",
+    "\n",
+    "   \n",
+    "    return letra == letra_correcta\n",
+    "\n",
+    "\n",
+    "dni = \"12345678Z\"\n",
+    "print(es_dni_valido(dni))  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "dni = \"12345678T\"\n",
+    "print(es_dni_valido(dni))  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "dni=\"55555555\"\n",
+    "print(es_dni_valido(dni))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -272,8 +694,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
