--- a/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_02/Unidad_02/Practica_Obligatoria/08_Practica_Obligatoria_OOP.ipynb
@@ -95,26 +95,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Jeff = User('Jeff', 70, True)\n",
-    "Joe = User('Joe', 70, False)\n",
+    "class Usuario:\n",
+    "    def __init__(self, nombre, saldo_inicial, checking_account):\n",
+    "        self.nombre = nombre\n",
+    "        self.saldo = saldo_inicial\n",
+    "        self.checking_account = checking_account\n",
     "\n",
-    "Jeff.withdraw(2) # Devuelve 'Jeff tiene 68.'\n",
+    "    def withdraw(self, dinero_a_retirar):\n",
+    "        if dinero_a_retirar > self.saldo:\n",
+    "            raise ValueError(\"No hay suficiente dinero para retirar.\")\n",
+    "        self.saldo -= dinero_a_retirar\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo}.\"\n",
     "\n",
-    "Joe.check(Jeff, 50) # Devuelve 'Joe tiene 120 y Jeff tiene 18.'\n",
+    "    def transfer_money(self, otro_usuario, dinero_a_transferir):\n",
+    "        if not otro_usuario.checking_account:\n",
+    "            raise ValueError(\"El otro usuario no tiene una cuenta de cheques.\")\n",
+    "        if dinero_a_transferir > self.saldo:\n",
+    "            raise ValueError(\"No hay suficiente dinero para transferir.\")\n",
+    "        \n",
+    "        self.saldo -= dinero_a_transferir\n",
+    "        otro_usuario.saldo += dinero_a_transferir\n",
+    "        return (f\"{self.nombre} tiene un saldo de {self.saldo}. \"\n",
+    "                f\"{otro_usuario.nombre} tiene un saldo de {otro_usuario.saldo}.\")\n",
     "\n",
-    "Jeff.check(Joe, 80) # Lanza un ValueError\n",
+    "    def add_cash(self, dinero_a_agregar):\n",
+    "        self.saldo += dinero_a_agregar\n",
+    "        return f\"{self.nombre} tiene un saldo de {self.saldo}.\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jesús tiene un saldo de 700.\n",
+      "Jesús tiene un saldo de 400. Miguel tiene un saldo de 600.\n",
+      "Jesús tiene un saldo de 900.\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "Joe.checking_account = True # Habilita la cuenta corriente para Joe\n",
     "\n",
-    "Jeff.check(Joe, 80) # Devuelve 'Jeff tiene 98 y Joe tiene 40'\n",
+    "usuario1 = Usuario(\"Jesús\", 900, True)\n",
+    "usuario2 = Usuario(\"Miguel\", 300, True)\n",
     "\n",
-    "Joe.check(Jeff, 100) # Lanza un ValueError\n",
     "\n",
-    "Jeff.add_cash(20.00) # Devuelve 'Jeff tiene 118.'\n"
+    "print(usuario1.withdraw(200)) \n",
+    "print(usuario1.transfer_money(usuario2, 300))  \n",
+    "print(usuario1.add_cash(500)) \n"
    ]
   }
  ],
@@ -134,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
